fix: simplify badge export to csv
